--- a/GzKitchen/FormNavigationTable.resx
+++ b/GzKitchen/FormNavigationTable.resx
@@ -835,234 +835,6 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;panelNavBar.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="panelTotal.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Left, Right</value>
-  </data>
-  <data name="lblTotal.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Left</value>
-  </data>
-  <data name="lblTotal.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 11.25pt</value>
-  </data>
-  <data name="lblTotal.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="lblTotal.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
-  </data>
-  <data name="lblTotal.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 34</value>
-  </data>
-  <data name="lblTotal.TabIndex" type="System.Int32, mscorlib">
-    <value>56</value>
-  </data>
-  <data name="lblTotal.Text" xml:space="preserve">
-    <value>Total</value>
-  </data>
-  <data name="lblTotal.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleLeft</value>
-  </data>
-  <data name="&gt;&gt;lblTotal.Name" xml:space="preserve">
-    <value>lblTotal</value>
-  </data>
-  <data name="&gt;&gt;lblTotal.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblTotal.Parent" xml:space="preserve">
-    <value>panelTotal</value>
-  </data>
-  <data name="&gt;&gt;lblTotal.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="txtTotal.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Right</value>
-  </data>
-  <data name="txtTotal.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 11.25pt</value>
-  </data>
-  <data name="txtTotal.Location" type="System.Drawing.Point, System.Drawing">
-    <value>203, 0</value>
-  </data>
-  <data name="txtTotal.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
-  </data>
-  <data name="txtTotal.Size" type="System.Drawing.Size, System.Drawing">
-    <value>320, 34</value>
-  </data>
-  <data name="txtTotal.TabIndex" type="System.Int32, mscorlib">
-    <value>55</value>
-  </data>
-  <data name="txtTotal.Text" xml:space="preserve">
-    <value>₺ 0</value>
-  </data>
-  <data name="txtTotal.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleRight</value>
-  </data>
-  <data name="&gt;&gt;txtTotal.Name" xml:space="preserve">
-    <value>txtTotal</value>
-  </data>
-  <data name="&gt;&gt;txtTotal.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;txtTotal.Parent" xml:space="preserve">
-    <value>panelTotal</value>
-  </data>
-  <data name="&gt;&gt;txtTotal.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="panelTotal.Location" type="System.Drawing.Point, System.Drawing">
-    <value>32, 533</value>
-  </data>
-  <data name="panelTotal.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
-  </data>
-  <data name="panelTotal.Size" type="System.Drawing.Size, System.Drawing">
-    <value>523, 34</value>
-  </data>
-  <data name="panelTotal.TabIndex" type="System.Int32, mscorlib">
-    <value>56</value>
-  </data>
-  <data name="&gt;&gt;panelTotal.Name" xml:space="preserve">
-    <value>panelTotal</value>
-  </data>
-  <data name="&gt;&gt;panelTotal.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;panelTotal.Parent" xml:space="preserve">
-    <value>panelPayment</value>
-  </data>
-  <data name="&gt;&gt;panelTotal.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="panelOrderedMenu.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Bottom, Left, Right</value>
-  </data>
-  <data name="panelOrderedMenu.AutoScroll" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="panelOrderedMenu.Location" type="System.Drawing.Point, System.Drawing">
-    <value>32, 86</value>
-  </data>
-  <data name="panelOrderedMenu.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
-  </data>
-  <data name="panelOrderedMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>539, 439</value>
-  </data>
-  <data name="panelOrderedMenu.TabIndex" type="System.Int32, mscorlib">
-    <value>51</value>
-  </data>
-  <data name="&gt;&gt;panelOrderedMenu.Name" xml:space="preserve">
-    <value>panelOrderedMenu</value>
-  </data>
-  <data name="&gt;&gt;panelOrderedMenu.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;panelOrderedMenu.Parent" xml:space="preserve">
-    <value>panelPayment</value>
-  </data>
-  <data name="&gt;&gt;panelOrderedMenu.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="btnCharge.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Bottom</value>
-  </data>
-  <data name="btnCharge.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
-    <value>Flat</value>
-  </data>
-  <data name="btnCharge.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 12pt</value>
-  </data>
-  <data name="btnCharge.Location" type="System.Drawing.Point, System.Drawing">
-    <value>32, 574</value>
-  </data>
-  <data name="btnCharge.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
-  </data>
-  <data name="btnCharge.Size" type="System.Drawing.Size, System.Drawing">
-    <value>523, 62</value>
-  </data>
-  <data name="btnCharge.TabIndex" type="System.Int32, mscorlib">
-    <value>54</value>
-  </data>
-  <data name="btnCharge.Text" xml:space="preserve">
-    <value>Charge</value>
-  </data>
-  <data name="&gt;&gt;btnCharge.Name" xml:space="preserve">
-    <value>btnCharge</value>
-  </data>
-  <data name="&gt;&gt;btnCharge.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnCharge.Parent" xml:space="preserve">
-    <value>panelPayment</value>
-  </data>
-  <data name="&gt;&gt;btnCharge.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="lblOrderedMenu.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 18pt</value>
-  </data>
-  <data name="lblOrderedMenu.Location" type="System.Drawing.Point, System.Drawing">
-    <value>32, 30</value>
-  </data>
-  <data name="lblOrderedMenu.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
-  </data>
-  <data name="lblOrderedMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>240, 37</value>
-  </data>
-  <data name="lblOrderedMenu.TabIndex" type="System.Int32, mscorlib">
-    <value>51</value>
-  </data>
-  <data name="lblOrderedMenu.Text" xml:space="preserve">
-    <value>Ordered Menu</value>
-  </data>
-  <data name="lblOrderedMenu.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleLeft</value>
-  </data>
-  <data name="&gt;&gt;lblOrderedMenu.Name" xml:space="preserve">
-    <value>lblOrderedMenu</value>
-  </data>
-  <data name="&gt;&gt;lblOrderedMenu.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblOrderedMenu.Parent" xml:space="preserve">
-    <value>panelPayment</value>
-  </data>
-  <data name="&gt;&gt;lblOrderedMenu.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="panelPayment.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Right</value>
-  </data>
-  <data name="panelPayment.Location" type="System.Drawing.Point, System.Drawing">
-    <value>946, 116</value>
-  </data>
-  <data name="panelPayment.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
-  </data>
-  <data name="panelPayment.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>32, 30, 32, 30</value>
-  </data>
-  <data name="panelPayment.Size" type="System.Drawing.Size, System.Drawing">
-    <value>587, 666</value>
-  </data>
-  <data name="panelPayment.TabIndex" type="System.Int32, mscorlib">
-    <value>52</value>
-  </data>
-  <data name="&gt;&gt;panelPayment.Name" xml:space="preserve">
-    <value>panelPayment</value>
-  </data>
-  <data name="&gt;&gt;panelPayment.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;panelPayment.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;panelPayment.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
   <data name="panelMenuList.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
@@ -1081,7 +853,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="panelMenuList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>882, 538</value>
+    <value>1469, 538</value>
   </data>
   <data name="panelMenuList.TabIndex" type="System.Int32, mscorlib">
     <value>50</value>
@@ -1822,7 +1594,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="txtSearch.Size" type="System.Drawing.Size, System.Drawing">
-    <value>410, 19</value>
+    <value>997, 19</value>
   </data>
   <data name="txtSearch.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -1846,7 +1618,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="panelSearch.Size" type="System.Drawing.Size, System.Drawing">
-    <value>464, 48</value>
+    <value>1051, 48</value>
   </data>
   <data name="panelSearch.TabIndex" type="System.Int32, mscorlib">
     <value>49</value>
@@ -1879,7 +1651,7 @@
     <value>48</value>
   </data>
   <data name="lblMenuList.Text" xml:space="preserve">
-    <value>Menu List</value>
+    <value>Table List</value>
   </data>
   <data name="lblMenuList.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleLeft</value>
@@ -1906,7 +1678,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="panelMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>946, 666</value>
+    <value>1533, 666</value>
   </data>
   <data name="panelMenu.TabIndex" type="System.Int32, mscorlib">
     <value>53</value>
@@ -3787,7 +3559,7 @@
     <value>AdiCO - Cashier</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>FormNavigationCashier</value>
+    <value>FormNavigationTable</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
